syntax = "proto3";
option go_package = "yrcf_grpc_case/grpc/rmdir/proto/;rmdir";

import "response.proto";

package YrcfAgent;


// message for rpc rmdir
message RmDirRequest {
    bool use_absolute_path = 1;

    // if target directory is not empty, must set true
    bool remove_recursively = 2;

    repeated string path = 3;
}
message RmDirResponse {
    ResMes result = 1;
}

service RmDir {
  rpc RmDir(RmDirRequest) returns (RmDirResponse) {}
}